--- a/lista2.ipynb
+++ b/lista2.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "5ba69fcd",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "0e5571e0",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,8 @@
     }
    ],
    "source": [
-    "print(n*(m*\"\\u25a8\\u25a2\"+\"\\n\"+m*\"\\u25a2\\u25a8\"+\"\\n\"))"
+    "szachownica = n*(m*\"\\u25a8\\u25a2\"+\"\\n\"+m*\"\\u25a2\\u25a8\"+\"\\n\")\n",
+    "print(szachownica)"
    ]
   },
   {
@@ -573,7 +574,7 @@
    ],
    "source": [
     "imię = input(\"Jak masz na imię? \")\n",
-    "print(\"Witaj \" + imię + \", miło Cię widzieć!\")\n",
+    "print(\"Witaj \" + imię.capitalize() + \", miło Cię widzieć!\")\n",
     "print(\"Czy wiedziałeś, że twoje imie czytane od końca, to \" + imię[::-1].capitalize() + \"?\")"
    ]
   },
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "id": "5e4b83a7",
    "metadata": {},
    "outputs": [
@@ -597,8 +598,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Podaj x:  7\n",
-      "Podaj y:  9\n"
+      "Podaj x:  9\n",
+      "Podaj y:  7\n"
      ]
     },
     {
@@ -606,23 +607,23 @@
      "output_type": "stream",
      "text": [
       "Wynik dodawania: 16\n",
-      "Wynik odejmowania: -2 lub 2\n",
+      "Wynik odejmowania: 2 lub -2\n",
       "Wynik mnożenia: 63\n",
-      "Wynik dzielenia: 0.78 lub 1.29\n",
-      "Wynik dzielenia z resztą: 0r7 lub 1r2\n",
-      "Wynik potęgowania: 40353607 lub 4782969\n"
+      "Wynik dzielenia: 1.29 lub 0.78\n",
+      "Wynik dzielenia z resztą: 1r2 lub 0r7\n",
+      "Wynik potęgowania: 4782969 lub 40353607\n"
      ]
     }
    ],
    "source": [
     "x = int(input(\"Podaj x: \"))\n",
     "y = int(input(\"Podaj y: \"))\n",
-    "print(\"Wynik dodawania:\", x+y)\n",
-    "print(\"Wynik odejmowania:\", x-y, \"lub\", y-x)\n",
-    "print(\"Wynik mnożenia:\", x*y)\n",
-    "print(\"Wynik dzielenia:\", f\"{x/y:.2f}\", \"lub\", f\"{y/x:.2f}\")\n",
-    "print(\"Wynik dzielenia z resztą:\", f\"{x//y}r{x%y}\", \"lub\", f\"{y//x}r{y%x}\")\n",
-    "print(\"Wynik potęgowania:\", x**y, \"lub\", y**x)"
+    "print(f\"Wynik dodawania: {x+y}\")\n",
+    "print(f\"Wynik odejmowania: {x-y} lub {y-x}\")\n",
+    "print(f\"Wynik mnożenia: {x*y}\")\n",
+    "print(f\"Wynik dzielenia: {x/y:.2f} lub {y/x:.2f}\")\n",
+    "print(f\"Wynik dzielenia z resztą: {x//y}r{x%y} lub {y//x}r{y%x}\")\n",
+    "print(f\"Wynik potęgowania: {x**y} lub {y**x}\")"
    ]
   },
   {
@@ -691,14 +692,6 @@
    "source": [
     "<div style=\"text-align: right\"> Powodzenia!<br><i>Zespół kursu Wstęp do programowania</i></div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e342db8b-d03a-4046-b2db-289272bb9fc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
