--- a/lista3.ipynb
+++ b/lista3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "2ceefa09",
    "metadata": {},
    "outputs": [],
@@ -86,11 +86,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "405aee10-36f9-4308-a55a-98b952937410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 0), (2, 1), (3, 2), (4, 3), (5, 4), (6, 5), (7, 6), (8, 7)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "print(list(zip(L[1:], L[:-1])))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "310f6ab7-3e3c-425a-9920-4da4368825ae",
    "metadata": {},
    "source": [
-    "[(L[1], L[0]), (L[2], L[1]), (L[3], L[2]), ..., (L[-2], L[-1])]"
+    "\\[(L\\[1\\], L\\[0\\]), (L\\[2\\], L\\[1\\]), (L\\[3\\], L\\[2\\]), ... , (L\\[-1\\], L\\[-2\\])\\]"
    ]
   },
   {
@@ -109,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "f7c74720-fe8e-483d-a4c8-3703ea4c2bd8",
    "metadata": {},
    "outputs": [
@@ -117,13 +136,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.0, -0.5, -0.83, -0.58, -0.78, -0.62, -0.76, -0.63, -0.75, -0.65, -0.74, -0.65, -0.73, -0.66, -0.73, -0.66, -0.72, -0.67, -0.72, -0.67, -0.72, -0.67, -0.71, -0.67, -0.71, -0.67, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.71, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.68, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69, -0.7, -0.69]\n"
+      "[-1.0, -0.5, -0.833, -0.583, -0.783, -0.617, -0.76, -0.635, -0.746, -0.646, -0.737, -0.653, -0.73, -0.659, -0.725, -0.663, -0.722, -0.666, -0.719, -0.669, -0.716, -0.671, -0.714, -0.673, -0.713, -0.674, -0.711, -0.676, -0.71, -0.677, -0.709, -0.678, -0.708, -0.679, -0.707, -0.679, -0.706, -0.68, -0.706, -0.681, -0.705, -0.681, -0.705, -0.682, -0.704, -0.682, -0.704, -0.683, -0.703, -0.683, -0.703, -0.684, -0.702, -0.684, -0.702, -0.684, -0.702, -0.685, -0.702, -0.685, -0.701, -0.685, -0.701, -0.685, -0.701, -0.686, -0.701, -0.686, -0.7, -0.686, -0.7, -0.686, -0.7, -0.686, -0.7, -0.687, -0.7, -0.687, -0.699, -0.687, -0.699, -0.687, -0.699, -0.687, -0.699, -0.687, -0.699, -0.687, -0.699, -0.688, -0.699, -0.688, -0.698, -0.688, -0.698, -0.688, -0.698, -0.688, -0.698, -0.688]\n"
      ]
     }
    ],
    "source": [
     "L = [sum([(-1)**k/k for k in range(1, n+1)]) for n in range (1, 101)]\n",
-    "print(str([round(i, 2) for i in L]))"
+    "print(str([round(i, 3) for i in L]))"
    ]
   },
   {
@@ -208,19 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 24,
    "id": "e0cae480",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(375, 200, 425)]"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(375, 200, 425)}\n",
+      "Tak\n"
+     ]
     }
    ],
    "source": [
@@ -228,19 +245,10 @@
     "# można uznać że spośród boków a i b, ten dłuższy jest oznaczony jako a\n",
     "# a i b nie muszą osiągać wartości od 500 w górę ponieważ c musi być najdłuższym bokiem co jest niemożliwe dla a + b >= 500\n",
     "\n",
-    "# from functools import reduce\n",
-    "# trojkaty = reduce(lambda T, a: T + [(a, b, 1000 - a - b) for b in range(1, a+1) if (1000-a-b)**2 == a**2 + b **2], range(1, 500), [])\n",
-    "# trojkaty\n",
+    "trojkaty = set((a, b, 1000 - a - b) for a in range(1, 500) for b in range(1, a+1) if (1000-a-b)**2 == a**2 + b **2)\n",
     "\n",
-    "import itertools as it\n",
-    "trojkaty = list(it.chain(*[[(a, b, 1000 - a - b) for b in range(1, a+1) if (1000-a-b)**2 == a**2 + b **2] for a in range(1, 500)]))\n",
-    "trojkaty\n",
-    "\n",
-    "# for a in range(1, 500):\n",
-    "#     for b in range(1, a+1):\n",
-    "#         c = 1000 - a - b\n",
-    "#         if c**2 == a**2 + b**2:\n",
-    "#             print(a, b, c)"
+    "print(trojkaty)\n",
+    "print(\"Tak\" if trojkaty else \"Nie\")"
    ]
   },
   {
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 62,
    "id": "d4d1c3f3",
    "metadata": {},
    "outputs": [
@@ -268,28 +276,31 @@
      "output_type": "stream",
      "text": [
       "Najmniejszy trójkąt: 3, 4, 5 (6)\n",
-      "Największy trójkąt: 40, 50, 30 (600)\n",
+      "Największy trójkąt: 30, 40, 50 (600)\n",
       "Największy trójkąt jest 100 razy większy od najmniejszego\n"
      ]
     }
    ],
    "source": [
-    "trojkaty = {}\n",
-    "\n",
-    "for c in range(1, 50+1):\n",
-    "    for a in range(1, c):\n",
-    "        b = round(math.sqrt(c**2-a**2)) # Jeżeli b jest liczbą całkowitą, to zaokrąglenie zachowa jej wartość\n",
-    "        if c**2 == a**2 + b**2:\n",
-    "            trojkaty[frozenset({a, b, c})] = a*b/2 # mrożony zbiór jest niemutowalny, więc może być kluczem słownika\n",
-    "\n",
+    "trojkaty = {\n",
+    "    frozenset({a, b, c}): a*b/2\n",
+    "    for c in range(1, 50+1)\n",
+    "    for a in range(1, c)\n",
+    "    if (b := round(math.sqrt(c**2-a**2))) # W taki sposób można zadefiniować zmienną w strukturze złożonej od Pythona 3.8 (2019)\n",
+    "    if c**2 - a**2 == b**2\n",
+    "}\n",
+    "            \n",
     "# print(trojkaty)\n",
     "\n",
-    "najmniejszy = min(trojkaty.items(), key=lambda k: k[1])\n",
-    "najwiekszy = max(trojkaty.items(), key=lambda k: k[1])\n",
+    "najmniejsze_pole = min(trojkaty.values())\n",
+    "najmniejszy_trojkat = [\", \".join([str(i) for i in sorted(t)]) for t in trojkaty.keys() if trojkaty[t] == najmniejsze_pole][0]\n",
+    "       \n",
+    "najwieksze_pole = max(trojkaty.values())\n",
+    "najwiekszy_trojkat = [\", \".join([str(i) for i in sorted(t)]) for t in trojkaty.keys() if trojkaty[t] == najwieksze_pole][0]\n",
     "\n",
-    "print(f\"Najmniejszy trójkąt: {', '.join([str(i) for i in najmniejszy[0]])} ({najmniejszy[1]:.0f})\")\n",
-    "print(f\"Największy trójkąt: {', '.join([str(i) for i in najwiekszy[0]])} ({najwiekszy[1]:.0f})\")\n",
-    "print(f\"Największy trójkąt jest {najwiekszy[1]/najmniejszy[1]:.0f} razy większy od najmniejszego\")"
+    "print(f\"Najmniejszy trójkąt: {najmniejszy_trojkat} ({najmniejsze_pole:.0f})\")\n",
+    "print(f\"Największy trójkąt: {najwiekszy_trojkat} ({najwieksze_pole:.0f})\")\n",
+    "print(f\"Największy trójkąt jest {najwieksze_pole/najmniejsze_pole:.0f} razy większy od najmniejszego\")"
    ]
   },
   {
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 68,
    "id": "93258632-8095-41e5-ae56-9ad4d58c9aff",
    "metadata": {},
    "outputs": [],
@@ -342,47 +353,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 70,
    "id": "cafa7f95-93cb-4273-a810-98bb0efd70b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Białystok',\n",
+       "['Wrocław',\n",
        " 'Bydgoszcz',\n",
-       " 'Gdańsk',\n",
+       " 'Toruń',\n",
+       " 'Lublin',\n",
        " 'Gorzów Wielkopolski',\n",
+       " 'Zielona Góra',\n",
+       " 'Łódź',\n",
+       " 'Kraków',\n",
+       " 'Warszawa',\n",
+       " 'Opole',\n",
+       " 'Rzeszów',\n",
+       " 'Białystok',\n",
+       " 'Gdańsk',\n",
        " 'Katowice',\n",
        " 'Kielce',\n",
-       " 'Kraków',\n",
-       " 'Lublin',\n",
        " 'Olsztyn',\n",
-       " 'Opole',\n",
        " 'Poznań',\n",
-       " 'Rzeszów',\n",
-       " 'Szczecin',\n",
-       " 'Toruń',\n",
-       " 'Warszawa',\n",
-       " 'Wrocław',\n",
-       " 'Zielona Góra',\n",
-       " 'Łódź'}"
+       " 'Szczecin']"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from functools import reduce\n",
+    "W = [w for v in D.values() for w in v]\n",
     "\n",
-    "# W = set()\n",
-    "# for v in D.values():\n",
-    "#     W |= v\n",
-    "# W\n",
-    "\n",
-    "W = reduce(set.union, D.values())\n",
     "W"
    ]
   },
@@ -398,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 74,
    "id": "2f19ca65-af76-429e-9b2b-f484a3cfaff9",
    "metadata": {},
    "outputs": [],
@@ -416,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 76,
    "id": "4e0e1ee1-d4f7-4410-a814-b61992ece194",
    "metadata": {
     "scrolled": true
@@ -425,22 +430,16 @@
     {
      "data": {
       "text/plain": [
-       "{'dolnośląskie', 'lubuskie', 'opolskie'}"
+       "['dolnośląskie', 'lubuskie', 'opolskie']"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X = set()\n",
-    "# for k, v in D.items():\n",
-    "#     if M & v:\n",
-    "#         X.add(k)\n",
-    "# X\n",
-    "\n",
-    "X = reduce(lambda a, b: a | ({b[0]} if M & b[1] else set()), D.items(), set())\n",
+    "X = [k for k, v in D.items() if v & M]\n",
     "X"
    ]
   },
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 80,
    "id": "806c0f94-da09-42c1-9efb-18489efe084f",
    "metadata": {},
    "outputs": [
@@ -566,7 +565,7 @@
        " (0.9980655971335943, -0.0621696374314802)]"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,23 +585,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 112,
    "id": "629789c8-7e80-453b-9f88-7e9b73e93105",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1.0 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 0.9999999999999998 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 1.0000000000000002 1.0 1.0 1.0 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 0.9999999999999999 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 0.9999999999999999 0.9999999999999999 0.9999999999999999 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 0.9999999999999998 1.0 1.0 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 0.9999999999999999 0.9999999999999999\n",
+      "0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869\n"
+     ]
     }
    ],
    "source": [
-    "punkty[0] == (1, 0)  # powinniśmy zobaczyć True"
+    "print(punkty[0] == (1, 0))  # powinniśmy zobaczyć True\n",
+    "print(*[x**2 + y**2 for x, y in punkty]) # powinno być wszędzie około 1\n",
+    "print(*[f\"{(x2-x1)**2 + (y2-y1)**2:.6f}\" for (x1, y1), (x2, y2) in zip(punkty, punkty[1:])]) # powinno wszędzie być tyle samo"
    ]
   },
   {
