--- a/lista3.ipynb
+++ b/lista3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 118,
    "id": "2ceefa09",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 332,
    "id": "405aee10-36f9-4308-a55a-98b952937410",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
    "id": "310f6ab7-3e3c-425a-9920-4da4368825ae",
    "metadata": {},
    "source": [
-    "\\[(L\\[1\\], L\\[0\\]), (L\\[2\\], L\\[1\\]), (L\\[3\\], L\\[2\\]), ... , (L\\[-1\\], L\\[-2\\])\\]"
+    "Jak widać na przykładzie, powstanie lista postaci: \\[(L\\[1\\], L\\[0\\]), (L\\[2\\], L\\[1\\]), (L\\[3\\], L\\[2\\]), ... , (L\\[-1\\], L\\[-2\\])\\]"
    ]
   },
   {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 340,
    "id": "e0cae480",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,8 @@
     "# można uznać że spośród boków a i b, ten dłuższy jest oznaczony jako a\n",
     "# a i b nie muszą osiągać wartości od 500 w górę ponieważ c musi być najdłuższym bokiem co jest niemożliwe dla a + b >= 500\n",
     "\n",
-    "trojkaty = set((a, b, 1000 - a - b) for a in range(1, 500) for b in range(1, a+1) if (1000-a-b)**2 == a**2 + b **2)\n",
+    "# c := 1000 - a - b tworzy nową zmienną w strukturze złożonej i zwraca jej wartość\n",
+    "trojkaty = set((a, b, c) for a in range(1, 500) for b in range(1, a) if (c := 1000 - a - b)**2 == a**2 + b**2)\n",
     "\n",
     "print(trojkaty)\n",
     "print(\"Tak\" if trojkaty else \"Nie\")"
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 326,
    "id": "d4d1c3f3",
    "metadata": {},
    "outputs": [
@@ -286,8 +287,7 @@
     "    frozenset({a, b, c}): a*b/2\n",
     "    for c in range(1, 50+1)\n",
     "    for a in range(1, c)\n",
-    "    if (b := round(math.sqrt(c**2-a**2))) # W taki sposób można zadefiniować zmienną w strukturze złożonej od Pythona 3.8 (2019)\n",
-    "    if c**2 - a**2 == b**2\n",
+    "    if c**2 - a**2 == (b := round(math.sqrt(c**2-a**2)))**2\n",
     "}\n",
     "            \n",
     "# print(trojkaty)\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "93258632-8095-41e5-ae56-9ad4d58c9aff",
    "metadata": {},
    "outputs": [],
@@ -353,41 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "id": "cafa7f95-93cb-4273-a810-98bb0efd70b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Wrocław',\n",
-       " 'Bydgoszcz',\n",
-       " 'Toruń',\n",
-       " 'Lublin',\n",
-       " 'Gorzów Wielkopolski',\n",
-       " 'Zielona Góra',\n",
-       " 'Łódź',\n",
-       " 'Kraków',\n",
-       " 'Warszawa',\n",
-       " 'Opole',\n",
-       " 'Rzeszów',\n",
-       " 'Białystok',\n",
-       " 'Gdańsk',\n",
-       " 'Katowice',\n",
-       " 'Kielce',\n",
-       " 'Olsztyn',\n",
-       " 'Poznań',\n",
-       " 'Szczecin']"
+       "{'Gorzów Wielkopolski', 'Poznań', 'Wrocław', 'Zielona Góra'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "W = [w for v in D.values() for w in v]\n",
-    "\n",
+    "W = {w for k, v in D.items() for w in v if k in S}\n",
     "W"
    ]
   },
@@ -403,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 99,
    "id": "2f19ca65-af76-429e-9b2b-f484a3cfaff9",
    "metadata": {},
    "outputs": [],
@@ -421,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "id": "4e0e1ee1-d4f7-4410-a814-b61992ece194",
    "metadata": {
     "scrolled": true
@@ -430,16 +412,16 @@
     {
      "data": {
       "text/plain": [
-       "['dolnośląskie', 'lubuskie', 'opolskie']"
+       "{'dolnośląskie', 'lubuskie', 'opolskie'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = [k for k, v in D.items() if v & M]\n",
+    "X = {k for k, v in D.items() if v & M}\n",
     "X"
    ]
   },
@@ -454,125 +436,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88cf2ddd-1a56-452c-b9a0-6b15c1d83fb2",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\left( \\cos\\left( \\frac{2 \\pi k}{101} \\right), \\quad \\sin\\left( \\frac{2 \\pi k}{101} \\right) \\right)\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 342,
    "id": "806c0f94-da09-42c1-9efb-18489efe084f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(1.0, 0.0),\n",
-       " (0.9980655971335943, 0.062169637431480525),\n",
-       " (0.9922698723632765, 0.12409875261325934),\n",
-       " (0.9826352482222637, 0.18554775382949326),\n",
-       " (0.9691989991996661, 0.24627890683200135),\n",
-       " (0.9520131075327299, 0.3060572545878873),\n",
-       " (0.9311440620976595, 0.3646515262826552),\n",
-       " (0.9066726011770726, 0.42183503206206224),\n",
-       " (0.8786934000992688, 0.477386540051127),\n",
-       " (0.8473147049577775, 0.531091132257275),\n",
-       " (0.8126579138282503, 0.5827410360463009),\n",
-       " (0.7748571071028899, 0.6321364279743263),\n",
-       " (0.7340585287594601, 0.6790862068658859),\n",
-       " (0.6904200205717467, 0.7234087331472498),\n",
-       " (0.6441104114503978, 0.7649325315746476),\n",
-       " (0.5953088642766661, 0.8034969546386757),\n",
-       " (0.5442041827560273, 0.8389528040783012),\n",
-       " (0.4909940809733222, 0.8711629080999505),\n",
-       " (0.4358844184753712, 0.90000265206853),\n",
-       " (0.3790884038403794, 0.9253604606172415),\n",
-       " (0.3208257698153678, 0.9471382293110001),\n",
-       " (0.26132192321286074, 0.9652517041934356),\n",
-       " (0.20080707285571867, 0.9796308077490816),\n",
-       " (0.13951533894392312, 0.9902199100196695),\n",
-       " (0.07768384728900624, 0.9969780438256293),\n",
-       " (0.015551811920350793, 0.9998790632601495),\n",
-       " (-0.046640390387417706, 0.9989117448426108),\n",
-       " (-0.10865215008547437, 0.9940798309400526),\n",
-       " (-0.1702435557223985, 0.9854020152886813),\n",
-       " (-0.23117632211496966, 0.9729118706714375),\n",
-       " (-0.2912147122272519, 0.9566577190314197),\n",
-       " (-0.35012644919139047, 0.9367024445236751),\n",
-       " (-0.4076836149416887, 0.9131232502286188),\n",
-       " (-0.46366353198532745, 0.8860113594683148),\n",
-       " (-0.5178496248983254, 0.8554716628811638),\n",
-       " (-0.5700322582137827, 0.8216223126204008),\n",
-       " (-0.620009547460775, 0.7845942652463661),\n",
-       " (-0.6675881402161536, 0.7445307750810152),\n",
-       " (-0.7125839641475069, 0.7015868399847767),\n",
-       " (-0.7548229391532568, 0.65592860169994),\n",
-       " (-0.7941416508447533, 0.607732703080532),\n",
-       " (-0.8303879827647973, 0.5571856046954289),\n",
-       " (-0.8634217048966635, 0.5044828634486398),\n",
-       " (-0.8931150161867915, 0.44982837600763603),\n",
-       " (-0.9193530389822362, 0.3934335899667527),\n",
-       " (-0.9420342634699891, 0.335516685797525),\n",
-       " (-0.9610709403987245, 0.2763017327508305),\n",
-       " (-0.976389420563607, 0.2160178219764834),\n",
-       " (-0.9879304397407567, 0.1548981802140847),\n",
-       " (-0.9956493479690186, 0.09317926748407171),\n",
-       " (-0.9995162822919881, 0.031099862269836753),\n",
-       " (-0.9995162822919881, -0.031099862269836506),\n",
-       " (-0.9956493479690185, -0.09317926748407192),\n",
-       " (-0.9879304397407568, -0.15489818021408444),\n",
-       " (-0.9763894205636071, -0.21601782197648314),\n",
-       " (-0.9610709403987245, -0.27630173275083025),\n",
-       " (-0.9420342634699892, -0.3355166857975248),\n",
-       " (-0.9193530389822364, -0.3934335899667521),\n",
-       " (-0.8931150161867916, -0.4498283760076358),\n",
-       " (-0.8634217048966636, -0.5044828634486397),\n",
-       " (-0.8303879827647976, -0.5571856046954283),\n",
-       " (-0.7941416508447534, -0.6077327030805317),\n",
-       " (-0.7548229391532574, -0.6559286016999396),\n",
-       " (-0.7125839641475068, -0.7015868399847768),\n",
-       " (-0.6675881402161539, -0.744530775081015),\n",
-       " (-0.6200095474607752, -0.784594265246366),\n",
-       " (-0.5700322582137825, -0.8216223126204009),\n",
-       " (-0.5178496248983256, -0.8554716628811637),\n",
-       " (-0.4636635319853273, -0.8860113594683148),\n",
-       " (-0.4076836149416893, -0.9131232502286186),\n",
-       " (-0.3501264491913909, -0.9367024445236749),\n",
-       " (-0.291214712227252, -0.9566577190314197),\n",
-       " (-0.2311763221149701, -0.9729118706714374),\n",
-       " (-0.17024355572239874, -0.9854020152886813),\n",
-       " (-0.10865215008547438, -0.9940798309400526),\n",
-       " (-0.04664039038741795, -0.9989117448426108),\n",
-       " (0.015551811920350768, -0.9998790632601495),\n",
-       " (0.07768384728900643, -0.9969780438256293),\n",
-       " (0.13951533894392268, -0.9902199100196695),\n",
-       " (0.20080707285571842, -0.9796308077490816),\n",
-       " (0.2613219232128601, -0.9652517041934358),\n",
-       " (0.32082576981536737, -0.9471382293110002),\n",
-       " (0.3790884038403785, -0.9253604606172419),\n",
-       " (0.4358844184753714, -0.9000026520685299),\n",
-       " (0.490994080973322, -0.8711629080999506),\n",
-       " (0.5442041827560273, -0.8389528040783012),\n",
-       " (0.5953088642766656, -0.803496954638676),\n",
-       " (0.6441104114503976, -0.7649325315746478),\n",
-       " (0.6904200205717462, -0.7234087331472503),\n",
-       " (0.7340585287594603, -0.6790862068658856),\n",
-       " (0.7748571071028897, -0.6321364279743266),\n",
-       " (0.8126579138282498, -0.5827410360463015),\n",
-       " (0.8473147049577773, -0.5310911322572754),\n",
-       " (0.8786934000992683, -0.4773865400511279),\n",
-       " (0.9066726011770726, -0.4218350320620621),\n",
-       " (0.9311440620976594, -0.3646515262826555),\n",
-       " (0.9520131075327298, -0.30605725458788735),\n",
-       " (0.969198999199666, -0.24627890683200196),\n",
-       " (0.9826352482222637, -0.18554775382949354),\n",
-       " (0.9922698723632765, -0.12409875261325932),\n",
-       " (0.9980655971335943, -0.0621696374314802)]"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.0°: ( 1.000,  0.000)\n",
+      "  3.6°: ( 0.998,  0.062)\n",
+      "  7.1°: ( 0.992,  0.124)\n",
+      " 10.7°: ( 0.983,  0.186)\n",
+      " 14.3°: ( 0.969,  0.246)\n",
+      " 17.8°: ( 0.952,  0.306)\n",
+      " 21.4°: ( 0.931,  0.365)\n",
+      " 25.0°: ( 0.907,  0.422)\n",
+      " 28.5°: ( 0.879,  0.477)\n",
+      " 32.1°: ( 0.847,  0.531)\n",
+      " 35.6°: ( 0.813,  0.583)\n",
+      " 39.2°: ( 0.775,  0.632)\n",
+      " 42.8°: ( 0.734,  0.679)\n",
+      " 46.3°: ( 0.690,  0.723)\n",
+      " 49.9°: ( 0.644,  0.765)\n",
+      " 53.5°: ( 0.595,  0.803)\n",
+      " 57.0°: ( 0.544,  0.839)\n",
+      " 60.6°: ( 0.491,  0.871)\n",
+      " 64.2°: ( 0.436,  0.900)\n",
+      " 67.7°: ( 0.379,  0.925)\n",
+      " 71.3°: ( 0.321,  0.947)\n",
+      " 74.9°: ( 0.261,  0.965)\n",
+      " 78.4°: ( 0.201,  0.980)\n",
+      " 82.0°: ( 0.140,  0.990)\n",
+      " 85.5°: ( 0.078,  0.997)\n",
+      " 89.1°: ( 0.016,  1.000)\n",
+      " 92.7°: (-0.047,  0.999)\n",
+      " 96.2°: (-0.109,  0.994)\n",
+      " 99.8°: (-0.170,  0.985)\n",
+      "103.4°: (-0.231,  0.973)\n",
+      "106.9°: (-0.291,  0.957)\n",
+      "110.5°: (-0.350,  0.937)\n",
+      "114.1°: (-0.408,  0.913)\n",
+      "117.6°: (-0.464,  0.886)\n",
+      "121.2°: (-0.518,  0.855)\n",
+      "124.8°: (-0.570,  0.822)\n",
+      "128.3°: (-0.620,  0.785)\n",
+      "131.9°: (-0.668,  0.745)\n",
+      "135.4°: (-0.713,  0.702)\n",
+      "139.0°: (-0.755,  0.656)\n",
+      "142.6°: (-0.794,  0.608)\n",
+      "146.1°: (-0.830,  0.557)\n",
+      "149.7°: (-0.863,  0.504)\n",
+      "153.3°: (-0.893,  0.450)\n",
+      "156.8°: (-0.919,  0.393)\n",
+      "160.4°: (-0.942,  0.336)\n",
+      "164.0°: (-0.961,  0.276)\n",
+      "167.5°: (-0.976,  0.216)\n",
+      "171.1°: (-0.988,  0.155)\n",
+      "174.7°: (-0.996,  0.093)\n",
+      "178.2°: (-1.000,  0.031)\n",
+      "181.8°: (-1.000, -0.031)\n",
+      "185.3°: (-0.996, -0.093)\n",
+      "188.9°: (-0.988, -0.155)\n",
+      "192.5°: (-0.976, -0.216)\n",
+      "196.0°: (-0.961, -0.276)\n",
+      "199.6°: (-0.942, -0.336)\n",
+      "203.2°: (-0.919, -0.393)\n",
+      "206.7°: (-0.893, -0.450)\n",
+      "210.3°: (-0.863, -0.504)\n",
+      "213.9°: (-0.830, -0.557)\n",
+      "217.4°: (-0.794, -0.608)\n",
+      "221.0°: (-0.755, -0.656)\n",
+      "224.6°: (-0.713, -0.702)\n",
+      "228.1°: (-0.668, -0.745)\n",
+      "231.7°: (-0.620, -0.785)\n",
+      "235.2°: (-0.570, -0.822)\n",
+      "238.8°: (-0.518, -0.855)\n",
+      "242.4°: (-0.464, -0.886)\n",
+      "245.9°: (-0.408, -0.913)\n",
+      "249.5°: (-0.350, -0.937)\n",
+      "253.1°: (-0.291, -0.957)\n",
+      "256.6°: (-0.231, -0.973)\n",
+      "260.2°: (-0.170, -0.985)\n",
+      "263.8°: (-0.109, -0.994)\n",
+      "267.3°: (-0.047, -0.999)\n",
+      "270.9°: ( 0.016, -1.000)\n",
+      "274.5°: ( 0.078, -0.997)\n",
+      "278.0°: ( 0.140, -0.990)\n",
+      "281.6°: ( 0.201, -0.980)\n",
+      "285.1°: ( 0.261, -0.965)\n",
+      "288.7°: ( 0.321, -0.947)\n",
+      "292.3°: ( 0.379, -0.925)\n",
+      "295.8°: ( 0.436, -0.900)\n",
+      "299.4°: ( 0.491, -0.871)\n",
+      "303.0°: ( 0.544, -0.839)\n",
+      "306.5°: ( 0.595, -0.803)\n",
+      "310.1°: ( 0.644, -0.765)\n",
+      "313.7°: ( 0.690, -0.723)\n",
+      "317.2°: ( 0.734, -0.679)\n",
+      "320.8°: ( 0.775, -0.632)\n",
+      "324.4°: ( 0.813, -0.583)\n",
+      "327.9°: ( 0.847, -0.531)\n",
+      "331.5°: ( 0.879, -0.477)\n",
+      "335.0°: ( 0.907, -0.422)\n",
+      "338.6°: ( 0.931, -0.365)\n",
+      "342.2°: ( 0.952, -0.306)\n",
+      "345.7°: ( 0.969, -0.246)\n",
+      "349.3°: ( 0.983, -0.186)\n",
+      "352.9°: ( 0.992, -0.124)\n",
+      "356.4°: ( 0.998, -0.062)\n"
+     ]
     }
    ],
    "source": [
-    "punkty = [(math.cos(i*(2*math.pi)/101), math.sin(i*(2*math.pi)/101)) for i in range(101)]\n",
-    "punkty"
+    "punkty = {(a := k*2*math.pi/101): (math.cos(a), math.sin(a)) for k in range(101)}\n",
+    "print(\"\\n\".join([f\"{a/(2*math.pi)*360:>5.1f}\\u00b0: ({x:>6.3f}, {y:>6.3f})\" for a, (x, y) in punkty.items()]))"
    ]
   },
   {
@@ -585,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 288,
    "id": "629789c8-7e80-453b-9f88-7e9b73e93105",
    "metadata": {},
    "outputs": [
@@ -594,15 +583,15 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "1.0 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 0.9999999999999998 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 1.0000000000000002 1.0 1.0 1.0 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 0.9999999999999999 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0000000000000002 1.0 0.9999999999999999 0.9999999999999999 0.9999999999999999 0.9999999999999999 0.9999999999999999 1.0 1.0 1.0 1.0 1.0 1.0 0.9999999999999998 1.0 1.0 1.0 1.0 0.9999999999999999 1.0 0.9999999999999999 1.0 1.0 0.9999999999999999 0.9999999999999999\n",
-      "0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869 0.003869\n"
+      "1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0\n",
+      "0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387 0.00387\n"
      ]
     }
    ],
    "source": [
     "print(punkty[0] == (1, 0))  # powinniśmy zobaczyć True\n",
-    "print(*[x**2 + y**2 for x, y in punkty]) # powinno być wszędzie około 1\n",
-    "print(*[f\"{(x2-x1)**2 + (y2-y1)**2:.6f}\" for (x1, y1), (x2, y2) in zip(punkty, punkty[1:])]) # powinno wszędzie być tyle samo"
+    "print(*[f\"{x**2 + y**2:.1f}\" for x, y in punkty.values()]) # moduł powinien być równy 1\n",
+    "print(*[f\"{(x2-x1)**2 + (y2-y1)**2:.5f}\" for (x1, y1), (x2, y2) in zip(punkty.values(), list(punkty.values())[1:])]) # odległości pomiędzy punktami obok siebie powinny być równe"
    ]
   },
   {
